--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "perspectives-react",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "React components to build a GUI based on the perspectives-protocol (hides connection to perspectives-core).",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/babel ./src/perspectives-react-components.js > index.js"
   },
   "repository": {
     "type": "git",
@@ -21,9 +22,13 @@
   },
   "homepage": "https://github.com/joopringelberg/perspectives-react#readme",
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.4.1",
+    "perspectives-proxy": "^1.0.0",
     "prop-types": "^15.6.2",
-    "perspectives-proxy": "^1.0.0"
+    "react": "^16.2.0",
+    "react-dom": "^16.4.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react": "^6.24.1"
   }
 }
