Dependency for perspectives-proxy

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/joopringelberg/perspectives-react#readme",
   "dependencies": {
-    "perspectives-proxy": "^1.0.0",
+    "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git",
     "prop-types": "^15.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.4.1"
