--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git",
     "prop-types": "^15.6.2",
     "react": "^16.2.0",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-loadable": "^5.5.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
