--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git#v1.4.0",
     "prop-types": "^15.6.2",
     "react": "^16.13.1",
-    "react-loadable": "^5.5.0"
+    "react-loadable": "^5.5.0",
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.13.1",
+    "@primer/octicons-react": "^9.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
