--- a/package.json
+++ b/package.json
@@ -24,26 +24,28 @@
     "url": "https://github.com/joopringelberg/perspectives-react/issues"
   },
   "homepage": "https://github.com/joopringelberg/perspectives-react#readme",
-  "dependencies": {
-    "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git#v1.5.0",
-    "prop-types": "^15.6.2",
-    "react-loadable": "^5.5.0",
-    "@primer/octicons-react": "^9.0.0"
-  },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1"
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
+    "@primer/octicons-react": "^11.0.0",
+    "@babel/polyfill": "^7.12.1",
+    "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git#v1.5.0",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "style-loader": "^0.23.1",
-    "css-loader": "^2.1.1",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^3.0.8"
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "babel-loader": "^8.2.1",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.13.0",
+    "eslint-plugin-react": "^7.21.5",
+    "ignore-loader": "^0.1.2",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   }
 }
