--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@primer/octicons-react": "^11.0.0",
     "@babel/polyfill": "^7.12.1",
     "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git#v1.8.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "pouchdb-browser": "^7.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
