--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.4",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "i18next": "^22.4.13"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -50,7 +51,6 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "i18next": "^22.4.13",
     "page-lifecycle": "^0.1.2"
   }
 }
