--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
   "peerDependencies": {
     "@babel/polyfill": "^7.12.1",
     "@primer/octicons-react": "^11.0.0",
+    "i18next": "^22.4.13",
     "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git#v1.16.0",
     "pouchdb-browser": "^7.2.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.4",
-    "react-dom": "^17.0.1",
-    "i18next": "^22.4.13"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -51,6 +51,8 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "page-lifecycle": "^0.1.2"
+    "highlight.js": "^11.7.0",
+    "page-lifecycle": "^0.1.2",
+    "perspectives-highlightjs": "github:joopringelberg/perspectives-highlightjs#v1.3.0"
   }
 }
