--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "build": "webpack",
-    "symlinks": "./createPerspectivesLinks.sh"
+    "symlinks": "./createPerspectivesLinks.sh",
+    "stats": "webpack --json > stats.json"
   },
   "repository": {
     "type": "git",
