First version of ChatComponent.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "symlinks": "./createPerspectivesLinks.sh",
-    "stats": "webpack --json > stats.json"
+    "stats": "webpack --json > stats.json",
+    "buildchat": "webpack --watch --config chat.webpack.config.js &"
   },
   "repository": {
     "type": "git",
@@ -26,15 +27,15 @@
   },
   "homepage": "https://github.com/joopringelberg/perspectives-react#readme",
   "peerDependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@primer/octicons-react": "^11.0.0",
+    "i18next": "^22.4.13",
+    "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git#v1.20.0",
+    "pouchdb-browser": "^7.2.2",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.4",
-    "react-dom": "^17.0.1",
-    "@primer/octicons-react": "^11.0.0",
-    "@babel/polyfill": "^7.12.1",
-    "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git#v1.20.0",
-    "prop-types": "^15.7.2",
-    "pouchdb-browser": "^7.2.2",
-    "i18next": "^22.4.13"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -52,8 +53,13 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^2.0.3",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@dicebear/collection": "^9.2.1",
+    "@dicebear/core": "^9.2.1",
     "highlight.js": "^11.7.0",
     "markdown-it": "^14.1.0",
+    "megajs": "^1.3.0",
     "page-lifecycle": "^0.1.2",
     "perspectives-highlightjs": "github:joopringelberg/perspectives-highlightjs#v1.3.0"
   }
