--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@dicebear/collection": "^9.2.1",
     "@dicebear/core": "^9.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "classnames": "^2.5.1",
     "highlight.js": "^11.7.0",
     "markdown-it": "^14.1.0",
     "megajs": "^1.3.0",
