--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "classnames": "^2.5.1",
     "highlight.js": "^11.7.0",
     "markdown-it": "^14.1.0",
+    "markdown-it-link-attributes": "^4.0.1",
     "megajs": "^1.3.0",
     "page-lifecycle": "^0.1.2",
     "perspectives-highlightjs": "github:joopringelberg/perspectives-highlightjs#v1.3.0"
