--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "perspectives-react",
-  "version": "0.25.0",
+  "version": "0.26.0",
   "description": "React components to build a GUI based on the perspectives-protocol (hides connection to perspectives-core).",
   "main": "dist/perspectives-react.js",
   "scripts": {
@@ -8,8 +8,7 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "symlinks": "./createPerspectivesLinks.sh",
-    "stats": "webpack --json > stats.json",
-    "buildchat": "webpack --watch --config chat.webpack.config.js &"
+    "stats": "webpack --json > stats.json"
   },
   "repository": {
     "type": "git",
@@ -30,7 +29,7 @@
     "@babel/polyfill": "^7.12.1",
     "@primer/octicons-react": "^11.0.0",
     "i18next": "^22.4.13",
-    "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git#v1.20.0",
+    "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git#v1.21.0",
     "pouchdb-browser": "^7.2.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -63,7 +62,6 @@
     "highlight.js": "^11.7.0",
     "markdown-it": "^14.1.0",
     "markdown-it-link-attributes": "^4.0.1",
-    "megajs": "^1.3.0",
     "page-lifecycle": "^0.1.2",
     "perspectives-highlightjs": "github:joopringelberg/perspectives-highlightjs#v1.3.0"
   }
