--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
   "homepage": "https://github.com/joopringelberg/perspectives-react#readme",
   "peerDependencies": {
     "@babel/polyfill": "^7.12.1",
-    "@primer/octicons-react": "^11.0.0",
+    "@primer/octicons-react": "^19.12.0",
     "i18next": "^22.4.13",
     "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git#v1.21.0",
     "pouchdb-browser": "^7.2.2",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.6.4",
-    "react-dom": "^17.0.1"
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
+    "@babel/preset-react": "^7.25.7",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
@@ -62,6 +62,7 @@
     "highlight.js": "^11.7.0",
     "markdown-it": "^14.1.0",
     "markdown-it-link-attributes": "^4.0.1",
+    "megajs": "^1.3.3",
     "page-lifecycle": "^0.1.2",
     "perspectives-highlightjs": "github:joopringelberg/perspectives-highlightjs#v1.3.0"
   }
