--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,7 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "targets": {
     "chrome": "129"
-  }
+  },
+  "sourceMaps": true
 }
