--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "perspectives-react",
   "version": "0.26.5",
   "description": "React components to build a GUI based on the perspectives-protocol (hides connection to perspectives-core).",
-  "main": "dist/perspectives-react.js",
-  "types": "dist/perspectives-react-components.d.ts",
+  "main": "dist/perspectives-react.jsm",
+  "module": "dist/perspectives-react.jsm",
+  "type": "module",
+  "types": "dist/perspectives-react.jsm.s.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
@@ -44,6 +46,8 @@
     "@babel/preset-env": "^7.25.8",
     "@babel/preset-react": "^7.25.7",
     "babel-loader": "^9.2.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.1",
