--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "perspectives-react",
   "version": "0.26.5",
   "description": "React components to build a GUI based on the perspectives-protocol (hides connection to perspectives-core).",
-  "main": "dist/perspectives-react.js",
-  "module": "dist/perspectives-react.js",
+  "main": "dist/perspectives-react-components.js",
+  "module": "dist/perspectives-react-components.js",
   "type": "module",
-  "types": "dist/perspectives-react.js.d.ts",
+  "types": "dist/perspectives-react-components.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "rollup -c -w",
@@ -46,18 +46,21 @@
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-typescript": "^12.1.2",
-    "@types/i18next": "^12.1.0",
+    "@types/i18next": "^13.0.0",
     "@types/pouchdb-browser": "^6.1.5",
     "@types/prop-types": "^15.7.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
-    "eslint": "^9.20.1",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "eslint": "^9.21.0",
     "eslint-plugin-react": "^7.37.4",
-    "rollup": "^4.34.8",
+    "rollup": "^4.34.9",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-delete": "^3.0.0",
+    "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-postcss": "^4.0.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^2.0.3",
@@ -66,14 +69,15 @@
     "@dicebear/core": "^9.2.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@primer/octicons-react": "^19.15.0",
+    "@primer/octicons-react": "^19.15.1",
     "@types/markdown-it": "^14.1.2",
     "@types/markdown-it-link-attributes": "^3.0.5",
     "classnames": "^2.5.1",
-    "highlight.js": "^11.10.0",
+    "events": "^3.3.0",
+    "highlight.js": "^11.11.1",
     "markdown-it": "^14.1.0",
     "markdown-it-link-attributes": "^4.0.1",
-    "megajs": "^1.3.3",
+    "megajs": "^1.3.5",
     "page-lifecycle": "^0.1.2",
     "perspectives-highlightjs": "github:joopringelberg/perspectives-highlightjs#v1.3.1"
   }
