--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,18 +4,23 @@
     "target": "ES2023",
     "declaration": true,
     "jsx": "react",
-    "declarationDir": "./dist/types",
+    "jsxFactory": "React.createElement",
+    "jsxFragmentFactory": "React.Fragment",
+    "declarationDir": "dist/types",
     "lib": ["ES2023", "DOM", "DOM.Iterable"],
-    "outDir": "./dist",
-    "rootDir": "./src",
+    "outDir": "dist",
+    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "typeRoots": ["./node_modules/@types"],
-    "baseUrl": ".",
+    "baseUrl": "./",
     "moduleResolution": "node",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+      "*": ["node_modules/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
