--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@primer/octicons-react": "^19.15.0",
     "events": "^3.3.0",
     "i18next": "^24.2.1",
-    "perspectives-proxy": "https://github.com/joopringelberg/perspectives-proxy.git#v1.21.4",
+    "perspectives-proxy": "workspace:*",
     "pouchdb-browser": "^9.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -47,7 +47,6 @@
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-typescript": "^12.1.2",
-    "@types/i18next": "^13.0.0",
     "@types/pouchdb-browser": "^6.1.5",
     "@types/prop-types": "^15.7.14",
     "@types/react": "^19.0.10",
@@ -69,6 +68,8 @@
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@dicebear/collection": "^9.2.2",
     "@dicebear/core": "^9.2.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@paralleldrive/cuid2": "^2.2.2",
     "@primer/octicons-react": "^19.15.0",
@@ -80,6 +81,7 @@
     "markdown-it-link-attributes": "^4.0.1",
     "megajs": "^1.3.5",
     "page-lifecycle": "^0.1.2",
-    "perspectives-highlightjs": "github:joopringelberg/perspectives-highlightjs#v1.3.1"
+    "perspectives-highlightjs": "workspace:*",
+    "regenerator-runtime": "^0.14.1"
   }
 }
