--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "typeRoots": ["./node_modules/@types"],
+    "typeRoots": ["../../node_modules/@types"],
     "baseUrl": "./",
     "moduleResolution": "node",
     "resolveJsonModule": true,
